@@ -1,4 +1,4 @@
-.TH SG_READ_BUFFER "8" "January 2007" "sg3_utils\-1.23" SG3_UTILS
+.TH SG_READ_BUFFER "8" "February 2011" "sg3_utils\-1.31" SG3_UTILS
 .SH NAME
 sg_read_buffer \- send a SCSI READ BUFFER command
 .SH SYNOPSIS
@@ -64,7 +64,7 @@ Written by Luben Tuikov and Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2007 Luben Tuikov and Douglas Gilbert
+Copyright \(co 2006\-2011 Luben Tuikov and Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
