@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006-2010 Luben Tuikov and Douglas Gilbert.
+ * Copyright (c) 2006-2011 Luben Tuikov and Douglas Gilbert.
  * All rights reserved.
  * Use of this source code is governed by a BSD-style
  * license that can be found in the BSD_LICENSE file.
@@ -24,7 +24,7 @@
  * This utility issues the SCSI READ BUFFER command to the given device.
  */
 
-static char * version_str = "1.05 20100312";
+static char * version_str = "1.06 20110211";
 
 
 static struct option long_options[] = {
@@ -39,6 +39,7 @@ static struct option long_options[] = {
         {"version", 0, 0, 'V'},
         {0, 0, 0, 0},
 };
+
 
 static void
 usage()
@@ -253,6 +254,15 @@ main(int argc, char * argv[])
             return SG_LIB_FILE_ERROR;
         }
     }
+
+#ifdef SG_LIB_WIN32
+#ifdef SG_LIB_WIN32_DIRECT
+    if (verbose > 4)
+        fprintf(stderr, "Initial win32 SPT interface state: %s\n",
+                scsi_pt_win32_spt_state() ? "direct" : "indirect");
+    scsi_pt_win32_direct(SG_LIB_WIN32_DIRECT /* SPT pt interface */);
+#endif
+#endif
 
     sg_fd = sg_cmds_open_device(device_name, 0 /* rw */, verbose);
     if (sg_fd < 0) {
